--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# person ignore
+database.db
+
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
 
